prodMetadata/src/objects/Give_Instance__c.object
<CustomObject>
    <description>This is a sub-object of the Give object containing the Date, Date Range and Time for a given Give.</description>
    <fields>
        <fullName>Application_Deadline__c</fullName>
        <label>Application Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>&quot;US&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_From__c</fullName>
        <formula>IF(ISNULL(Start_Date__c),&quot;&quot;,(IF(MONTH(Start_Date__c) == 1,&quot;Jan&quot;, 
(IF(MONTH(Start_Date__c) == 2,&quot;Feb&quot;,
(IF(MONTH(Start_Date__c) == 3,&quot;Mar&quot;,
(IF(MONTH(Start_Date__c) == 4,&quot;Apr&quot;,
(IF(MONTH(Start_Date__c) == 5,&quot;May&quot;,
(IF(MONTH(Start_Date__c) == 6,&quot;Jun&quot;,
(IF(MONTH(Start_Date__c) == 7,&quot;Jul&quot;,
(IF(MONTH(Start_Date__c) == 8,&quot;Aug&quot;,
(IF(MONTH(Start_Date__c) == 9,&quot;Sep&quot;,
(IF(MONTH(Start_Date__c) == 10,&quot;Oct&quot;,
(IF(MONTH(Start_Date__c) == 11,&quot;Nov&quot;,
(IF(MONTH(Start_Date__c) == 12,&quot;Dec&quot;,&quot;&quot;))))))))))))))))))))))) &amp;  &quot; &quot; &amp; TEXT(DAY(Start_Date__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date From</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_To__c</fullName>
        <formula>IF(ISNULL(End_Date__c), &quot;&quot;,(IF(MONTH(End_Date__c) == 1,&quot;Jan&quot;,
(IF(MONTH(End_Date__c) == 2,&quot;Feb&quot;,
(IF(MONTH(End_Date__c) == 3,&quot;Mar&quot;,
(IF(MONTH(End_Date__c) == 4,&quot;Apr&quot;,
(IF(MONTH(End_Date__c) == 5,&quot;May&quot;,
(IF(MONTH(End_Date__c) == 6,&quot;Jun&quot;,
(IF(MONTH(End_Date__c) == 7,&quot;Jul&quot;,
(IF(MONTH(End_Date__c) == 8,&quot;Aug&quot;,
(IF(MONTH(End_Date__c) == 9,&quot;Sep&quot;,
(IF(MONTH(End_Date__c) == 10,&quot;Oct&quot;,
(IF(MONTH(End_Date__c) == 11,&quot;Nov&quot;,
(IF(MONTH(End_Date__c) == 12,&quot;Dec&quot;,&quot;&quot;))))))))))))))))))))))) &amp; &quot; &quot; &amp; TEXT(DAY(End_Date__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Differentiator__c</fullName>
        <description>Differentiating term for this instance when there are multiple instances per Give (like the opposing team for a sporting event).</description>
        <inlineHelpText>Differentiating term for this instance when there are multiple instances per Give (like the opposing team for a sporting event).</inlineHelpText>
        <label>Distinguishing Term for this Instance</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>The end date of give date range. Blank if only one date.</description>
        <inlineHelpText>The end date of give date range. Blank if only one date.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>In format (HH:MM XX) where XX is AM or PM in upper case. (e.g. 11:30 AM)</description>
        <inlineHelpText>In format (HH:MM XX) where XX is AM or PM in upper case. (e.g. 11:30 AM)</inlineHelpText>
        <label>End Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For use by Geopointe to map Give Instances.</description>
        <inlineHelpText>For use by Geopointe to map Give Instances.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Give Instances</relationshipLabel>
        <relationshipName>Give_Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Give_Name__c</fullName>
        <formula>Give__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Give Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Give__c</fullName>
        <description>The parent Give object that these dates and times relate to.</description>
        <inlineHelpText>The parent Give object that these dates and times relate to.</inlineHelpText>
        <label>Give</label>
        <referenceTo>Give__c</referenceTo>
        <relationshipLabel>Give Instances</relationshipLabel>
        <relationshipName>Give_Instances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>Give__r.Location_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_Attended__c</fullName>
        <label>Num. Attended</label>
        <summarizedField>Give_Request__c.Units_Requested__c</summarizedField>
        <summaryFilterItems>
            <field>Give_Request__c.Attended__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Give_Request__c.Give_Instance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Inst__c</fullName>
        <formula>Give__r.Number_of_Give_Instances__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Num. Instances on Give</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Remaining__c</fullName>
        <formula>Number_of_Units__c  -  Number_of_Confirmed_Units__c -  Number_of_Tentative_Confirmed_Units__c -  Number_of_Waitlist_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Num. Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Applicants__c</fullName>
        <label>Num. Applicants</label>
        <summaryForeignKey>Give_Request__c.Give_Instance__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Confirmed_Requests__c</fullName>
        <label>Num. Confirmed Requests</label>
        <summaryFilterItems>
            <field>Give_Request__c.Stage__c</field>
            <operation>equals</operation>
            <value>Final confirmation</value>
        </summaryFilterItems>
        <summaryForeignKey>Give_Request__c.Give_Instance__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Confirmed_Units__c</fullName>
        <label>Num. Confirmed Units</label>
        <summarizedField>Give_Request__c.Units_Requested__c</summarizedField>
        <summaryFilterItems>
            <field>Give_Request__c.Stage__c</field>
            <operation>equals</operation>
            <value>Final confirmation</value>
        </summaryFilterItems>
        <summaryForeignKey>Give_Request__c.Give_Instance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Tentative_Confirmed_Requests__c</fullName>
        <label>Num. Tentative Confirmed Requests</label>
        <summaryFilterItems>
            <field>Give_Request__c.Stage__c</field>
            <operation>equals</operation>
            <value>Tentative confirmation</value>
        </summaryFilterItems>
        <summaryForeignKey>Give_Request__c.Give_Instance__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Tentative_Confirmed_Units__c</fullName>
        <label>Num. Tentative Confirmed Units</label>
        <summarizedField>Give_Request__c.Units_Requested__c</summarizedField>
        <summaryFilterItems>
            <field>Give_Request__c.Stage__c</field>
            <operation>equals</operation>
            <value>Tentative confirmation</value>
        </summaryFilterItems>
        <summaryForeignKey>Give_Request__c.Give_Instance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Units__c</fullName>
        <description>Quantity of give items available.</description>
        <inlineHelpText>Quantity of give items available.</inlineHelpText>
        <label>Num. Units</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Waitlist_Requests__c</fullName>
        <label>Num. Waitlist Requests</label>
        <summaryFilterItems>
            <field>Give_Request__c.Stage__c</field>
            <operation>equals</operation>
            <value>Wait-list</value>
        </summaryFilterItems>
        <summaryForeignKey>Give_Request__c.Give_Instance__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Waitlist_Units__c</fullName>
        <label>Num. Waitlist Units</label>
        <summarizedField>Give_Request__c.Units_Requested__c</summarizedField>
        <summaryFilterItems>
            <field>Give_Request__c.Stage__c</field>
            <operation>equals</operation>
            <value>Wait-list</value>
        </summaryFilterItems>
        <summaryForeignKey>Give_Request__c.Give_Instance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Numerical_Status__c</fullName>
        <formula>IF( ispickval(Status__c,&quot;Open&quot;),3,IF( ispickval(Status__c ,&quot;Waitlist&quot;),2,1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numerical Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partnership_hidden__c</fullName>
        <description>Hidden field for use by geopointe.</description>
        <formula>Give__r.Partnership_Request__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partnership (hidden)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerOfOne__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PowerOfOne</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reconfirm_Info_to_Send__c</fullName>
        <description>This text is sent to users in the Reconfirm Email on the designated Reconfirm Date.</description>
        <inlineHelpText>This text is sent to users in the Reconfirm Email on the designated Reconfirm Date (limit 255 characters -- sorry).</inlineHelpText>
        <label>Reconfirm Info to Send</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reconfirm_date__c</fullName>
        <description>Enter date when you want reconfirm request emails to go out at 8am ET to members who become Final Confirmed after you set this date.  To manually send reconfirm email, change Re-confirm Status field on the Give Request to &quot;Re-confirm Sent&quot;.</description>
        <inlineHelpText>Enter date when you want reconfirm request emails to go out at 8am ET to members who become Final Confirmed after you set this date.  To manually send reconfirm email, change Re-confirm Status field on the Give Request to &quot;Re-confirm Sent&quot;.</inlineHelpText>
        <label>Reconfirm date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The associated date of this give instance or start date of range.</description>
        <inlineHelpText>The associated date of this give instance or start date of range.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>In format (HH:MM XX) where XX is AM or PM in upper case. (e.g. 11:30 AM)</description>
        <inlineHelpText>In format (HH:MM XX) where XX is AM or PM in upper case. (e.g. 11:30 AM)</inlineHelpText>
        <label>Start Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Waitlist</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tentative_Number_Remaining__c</fullName>
        <formula>Number_of_Units__c  - ( Number_of_Confirmed_Units__c + Number_of_Tentative_Confirmed_Units__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Num. Tentative Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_End_Date__c</fullName>
        <formula>TEXT(YEAR(End_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year (End Date)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Start_Date__c</fullName>
        <formula>TEXT(YEAR(Start_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year (Start Date)</label>
        <type>Text</type>
    </fields>
    <label>Give Instance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Application_Deadline__c</columns>
        <columns>Number_of_Confirmed_Requests__c</columns>
        <columns>Number_of_Units__c</columns>
        <columns>End_Date__c</columns>
        <columns>Date_From__c</columns>
        <columns>Date_To__c</columns>
        <columns>End_Time__c</columns>
        <columns>Start_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Number_of_Confirmed_Requests__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>Give_Name__c</columns>
        <columns>Application_Deadline__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Number_of_Units__c</columns>
        <columns>Number_Remaining__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Created_in_the_last_2_months</fullName>
        <columns>Give__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Number_of_Units__c</columns>
        <columns>Number_of_Confirmed_Requests__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_MONTHS:2</value>
        </filters>
        <label>Created in the last 2 months</label>
    </listViews>
    <listViews>
        <fullName>Instances_with_Start_and_End_Time</fullName>
        <columns>NAME</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>Instances with Start and End Time</label>
    </listViews>
    <listViews>
        <fullName>Prior_to_2013</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Give_Name__c</columns>
        <columns>Number_of_Applicants__c</columns>
        <columns>Number_of_Confirmed_Requests__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year_Start_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>2013</value>
        </filters>
        <label>Prior to 2013</label>
    </listViews>
    <nameField>
        <displayFormat>GI-{000}</displayFormat>
        <label>Give Instance ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Give Instances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Available_Quantity_Check</fullName>
        <active>false</active>
        <description>SD: deactivated this, not sure why it would be on the Give Instance object.</description>
        <errorConditionFormula>Number_Remaining__c &lt;0</errorConditionFormula>
        <errorMessage>Available Quantity Exceeded</errorMessage>
    </validationRules>
</CustomObject>